# httraderpro

./: .gitignore  ADDENDUMS.md  CHPP_APPLICATION.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: ci.yml
app/: app.py  features.py  ho_import.py  ics_utils.py  pricing.py  pricing_model.py  scheduler.py  ui_helpers.py
data/: player_sales.csv
tests/: test_ho_import.py  test_ics_utils.py  test_pricing.py  test_pricing_model.py  test_scheduler.py
tests/data/: goalkeeper_ho.csv
